# site

./: .readthedocs.yaml  .readthedocs.yml  .travis.yml  2018-10-22-Course-website-setup-notes.md  Makefile  README.md  environment.yml  genindex.html  index.html  objects.inv  push.sh  requirements.txt  search.html  searchindex.js  setup.cfg
2017/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
2017/.doctrees/: environment.pickle  index.doctree
2017/_static/: documentation_options.js  google_analytics_tracker.js
2017/final-paper/: articles.html  final-report.html
2017/general-info/: course-details.html  grading.html  licensing.html
2018/: .buildinfo  genindex.html  index.html  search.html
2018/.doctrees/: environment.pickle  index.doctree
2018/final-paper/: articles.html  final-report.html  template.html
2018/general-info/: course-details.html  grading.html  licensing.html
_sources/: index.rst.txt
ai/: IntroQG-video-intro-screen.ai
develop/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
final-paper/: articles.html  final-report.html  template.html
general-info/: course-details.html  grading.html  licensing.html
master/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
source/: Makefile  conf.py  course-details.rst  grading.rst  index.rst  licensing.rst  pandoc-md-to-rst.py  rtd_requirements.txt  schedule.rst  setup.cfg
v2017/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
v2018/: genindex.html  index.html  search.html
(+643 files in other folders)
